# my-agents

./: .env.example  .gitignore  COLLABORATIVE_PHYSICS_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FLOW_SYSTEM_GUIDE.md  README.md  ROOT_IMPLEMENTATION_SUMMARY.md  SIMPLIFICATION_SUMMARY.md  agent_monitor.py  app.py  cleanup_for_deployment.sh  crewai_database_integration.py  demo_collaborative_physics.py  docker-compose.yml  launch_interfaces.py  learnings.md  monitored_llm.py  physics_crew_system.py  physics_flow_system.py  pyproject.toml  requirements.txt  run_physics_app.py  run_physics_gpt.py  setup_collaborative.py  streamlit_agent_conversations.py  streamlit_app.py  streamlit_app_simple.py  streamlit_canvas.py  streamlit_collaborative.py  streamlit_knowledge.py  streamlit_knowledge_dashboard.py  streamlit_physics_app.py  streamlit_simple.py  streamlit_simple_app.py  test_agent_conversations.py  test_collaborative_system.py  test_dataagent_integration.py  (+8 more)
.streamlit/: config.toml
all Arts2Survive/: 01_What_is_a_Streaming_API.md  02_Subgraph_in_LangGraph.md  03_Build_End2End_Multi_Agent_Workflow_with_Supervisor_and_HITL.md  04_AI_Agents_Under_The_Hood.md  05_Advanced_Multi_Agent_Systems_with_LangGraph.md  06_Retrieval_Augmented_Generation_Best_Practices.md  07_Vector_Databases_and_Embedding_Strategies.md  08_Fine_Tuning_Large_Language_Models.md  09_Prompt_Engineering_and_Chain_of_Thought.md  10_Building_Production_AI_Systems.md  11_Knowledge_Graphs_and_Graph_RAG.md  12_MLOps_and_Model_Deployment.md  13_Agentic_AI_and_Agent_Frameworks.md  14_Conversational_AI_and_Natural_Language_Processing.md  15_Computer_Vision_and_Deep_Learning.md  README.md
data/staging/: 1c71b55e-d5db-461e-a33f-ab0300c60dcc.parq  396eafcc-ba23-401c-b056-643d768a0711.parq  566ece22-b5fb-46d1-9dd7-bbb0ad308d6e.parq  7b9437b0-54f1-4fb2-ba82-d61188fb6dda.parq  87cd3c9b-81c7-4b73-8e7f-23b8b4168267.parq  b54dee86-13b9-4458-a023-ea973e12fd21.parq  b964ac47-138b-408d-9ea3-4cd60355fac1.parq
docs/: architecture.md
module-0/: basics.ipynb
notebooks/: experiments.ipynb
pages/: 1_🔬_Single_Agent.py  2_🤖_Collaborative.py
scripts/: setup.py
src/: __init__.py
src/agents/: __init__.py  advanced_supervisor.py  base.py  chat.py  collaborative_system.py  data_agent.py  data_tools.py  enhanced_physics_expert.py  hypothesis_generator.py  learning_system.py  mathematical_analysis.py  parallel_orchestrator.py  pattern_recognition.py  physics_expert.py  real_agent_manager.py  real_experimental_design.py  real_hypothesis_generator.py  real_pattern_recognition.py  real_physics_expert.py  supervisor.py  types.py
src/collaboration/: __init__.py  realtime_system.py
src/config/: __init__.py  semantic_config.py  settings.py
src/database/: __init__.py  migrations.py  (+1 more)
studio/: chat_agent.py  langgraph.json  main.py  research_agent.py
test_data/: dimuon_100k.csv  physics_experiment.csv
tests/: __init__.py  test_agents.py  test_tools.py
(+18 files in other folders)
